k8s/kustomization/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  labels:
    app: todo-app
    component: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    # Доступ: http://todo.local
    # Добавить в /etc/hosts: 127.0.0.1 todo.local
    - host: todo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 8080
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: todo-backend
                port:
                  number: 8080
          - path: /health
            pathType: Exact
            backend:
              service:
                name: todo-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend
                port:
                  number: 80
